create my web fonts for the project 1. action_man_bold 2. cooperhewitt_light downloaded from font_Squirrel test the fonts to see if they are working

--- a/dashboard.css
+++ b/dashboard.css
@@ -3,3 +3,21 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+@font-face {
+    font-family: 'action_manbold';
+    src: url('fonts/action_man_bold-webfont.woff2') format('woff2'),
+         url('fonts/action_man_bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'cooper_hewittlight';
+    src: url('fonts/cooperhewitt-light-webfont.woff2') format('woff2'),
+         url('fonts/cooperhewitt-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
