--- a/dashboard.css
+++ b/dashboard.css
@@ -25,7 +25,7 @@
 /* create custom properties for styling */
 :root {
     --header-size: 1.5rem;
-    --paragragh-size: 1.3rem;
+    --paragragh-size: 1.1rem;
     --content-size: 1rem;
     --body-bg-clr: aliceblue;
     --dashboard-bg-clr: rgb(90, 90, 246);
@@ -35,18 +35,42 @@
     --content-font: 'cooper_hewittlight';
 }
 
+svg {
+  width: 2rem;
+  fill: var(--dashboard-txt-clr);
+}
+
 header {
     background-color: var(--dashboard-bg-clr);
 }
 
-header > div {
-    border: 1px solid black;
-     margin-top: 10px;
+header p {
+    font-family: var(--paragraph-font);
+    font-size: var(--paragragh-size);
+    color: var(--dashboard-txt-clr);
 }
 
-svg {
-  width: 2rem;
-  fill: var(--dashboard-txt-clr);
+header > div div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px;
+    gap: 10px;
+}
+
+header .dashboard {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap: 10px;
+    font-family: var(--paragraph-font);
+    color: var(--dashboard-txt-clr);
+    align-self: self-start;
+}
+
+header .dashboard p {
+    font-size: var(--header-size);
 }
 
 section {
@@ -54,7 +78,7 @@ section {
     width: 100vw;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: repeat(auto-fit, minmax(250px, 1fr))
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr))
 }
 
 header {
@@ -63,6 +87,9 @@ header {
 }
 
 header {
+    padding-left: 20px;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    gap: 20px;
+    grid-template-rows: auto 1fr 1fr;
 }
+
