--- a/dashboard.css
+++ b/dashboard.css
@@ -24,6 +24,7 @@
 
 /* create custom properties for styling */
 :root {
+    --section-bg-clr: #E2E8F0;
     --header-size: 1.5rem;
     --paragragh-size: 1.1rem;
     --content-size: 1rem;
@@ -31,6 +32,7 @@
     --dashboard-bg-clr: rgb(90, 90, 246);
     --dashboard-txt-clr: whitesmoke;
     --dashboard-font: 'action_manbold';
+    --paragraph-txt-clr: 'black';
     --paragraph-font: 'action_manbold';
     --content-font: 'cooper_hewittlight';
 }
@@ -40,6 +42,31 @@ svg {
   fill: var(--dashboard-txt-clr);
 }
 
+img {
+    width: 3rem;
+}
+
+/* section */
+section {
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--section-bg-clr);
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: repeat(auto-fit, minmax(80px, 1fr))
+}
+
+header {
+    grid-column: 1;
+    grid-row: 1 / 5;
+}
+
+nav {
+    grid-column: 2 / 5;
+}
+/* section end */
+
+/* Header section start */
 header {
     background-color: var(--dashboard-bg-clr);
 }
@@ -73,18 +100,6 @@ header .dashboard p {
     font-size: var(--header-size);
 }
 
-section {
-    height: 100vh;
-    width: 100vw;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr))
-}
-
-header {
-    grid-column: 1;
-    grid-row: 1 / 5;
-}
 
 header {
     padding-left: 20px;
@@ -92,4 +107,84 @@ header {
     gap: 20px;
     grid-template-rows: auto 1fr 1fr;
 }
+/* Header section end */
 
+/* navbar section start */
+
+nav {
+    background-color: var(--dashboard-txt-clr);
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+}
+
+nav svg {
+    fill: var(--paragraph-txt-clr);
+}
+
+nav .nav_header {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    padding: 10px 20px;
+}
+
+nav .nav_header label {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+label input {
+    width: 70%;
+    border-radius: 20px;
+    border: none;
+    background-color: var(--section-bg-clr);
+    padding: 8px;
+}
+
+nav .nav_header .header_logo {
+    display: grid;
+    grid-template-columns: 2fr 2fr 5fr;
+    align-items: center;
+}
+
+.nav_content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 10px 20px;
+}
+
+nav p {
+    color: var(--paragraph-txt-clr);
+    font-family: var(--dashboard-font);
+    font-size: var(--content-size);
+}
+
+.content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(80px, auto));
+    justify-content: start;
+}
+
+.nav_links ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(80px, auto));
+    list-style: none;
+    justify-content: end;
+    gap: 20px;
+}
+
+ul li {
+    width: 5rem;
+    text-align: center;
+    border-radius: 20px;
+    background-color: var(--dashboard-bg-clr);
+    padding: 10px 20px;
+    place-self: center;
+}
+
+li a {
+    text-decoration: none;
+    font-family: var(--dashboard-font);
+    color: var(--dashboard-txt-clr);
+    font-size: var(--content-size);
+}
