--- a/dashboard.css
+++ b/dashboard.css
@@ -27,14 +27,14 @@
     --section-bg-clr: #E2E8F0;
     --header-size: 1.5rem;
     --paragragh-size: 1.1rem;
-    --content-size: 1rem;
+    --content-size: 0.8rem;
     --body-bg-clr: aliceblue;
     --dashboard-bg-clr: rgb(90, 90, 246);
     --dashboard-txt-clr: whitesmoke;
     --dashboard-font: 'action_manbold';
     --paragraph-txt-clr: 'black';
     --paragraph-font: 'action_manbold';
-    --content-font: 'cooper_hewittlight';
+    --content-font: 'Roboto';
 }
 
 svg {
@@ -48,12 +48,12 @@ img {
 
 /* section */
 section {
-    height: 100vh;
+    height: auto;
     width: 100vw;
     background-color: var(--section-bg-clr);
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: repeat(auto-fit, minmax(80px, 1fr))
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: repeat(auto-fit, minmax(100px, auto));
 }
 
 header {
@@ -63,6 +63,17 @@ header {
 
 nav {
     grid-column: 2 / 5;
+}
+
+main {
+    grid-column: 2 / 4;
+    grid-row: 2 / 5;
+    padding-left: 20px;
+}
+
+aside {
+    grid-column: 4 / 5;
+    grid-row: 2 / 5;
 }
 /* section end */
 
@@ -96,6 +107,10 @@ header .dashboard {
     align-self: self-start;
 }
 
+header >div:nth-child(3){
+    margin-top: 50px;
+}
+
 header .dashboard p {
     font-size: var(--header-size);
 }
@@ -105,7 +120,9 @@ header {
     padding-left: 20px;
     display: grid;
     gap: 20px;
-    grid-template-rows: auto 1fr 1fr;
+    /* grid-template-rows: auto 1fr 1fr; */
+    grid-template-rows: auto;
+    align-content: start;
 }
 /* Header section end */
 
@@ -187,4 +204,130 @@ li a {
     font-family: var(--dashboard-font);
     color: var(--dashboard-txt-clr);
     font-size: var(--content-size);
+}
+/* navbar end */
+
+/* main section start */
+
+main .card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 15px;
+    align-content: start;
+    padding: 20px;
+}
+
+main {
+    padding-top: 15px;
+}
+
+main > h2 {
+    padding: 5px 15px;
+    font-family: var(--paragraph-font);
+    font-size: var(--paragragh-size); 
+}
+main .card {
+    position: relative;
+    height: 250px;
+    background-color: var(--dashboard-txt-clr);
+    font-family: var(--content-font);
+    font-size: var(--content-size);
+    padding: 30px; 
+    border-radius: 15px;
+}
+
+.card h2 {
+    font-family: var(--paragraph-font);
+    font-size: var(--paragragh-size);
+    padding-bottom: 5px;
+}
+
+.card svg {
+    width: var(--paragragh-size);
+    fill: var(--paragraph-txt-clr);
+}
+
+.card .icons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+    padding: 10px;
+    gap: 15px;
+}
+
+.card-grid .border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 10px;
+    border-radius: 15px 0 0 15px;
+    background-color: var(--dashboard-bg-clr);
+}
+/* main section end */
+
+/* aside section start */
+.side-card .card svg{
+    width: 2rem;
+    height: 2rem;
+    fill: var(--paragraph-txt-clr);
+}
+
+aside {
+    display: grid;
+    min-width: 400px;
+    grid-template-columns: auto;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+    padding: 15px;
+    justify-content: start;
+}
+
+aside .side-card {
+    width: 300px;
+}
+
+aside .card {
+    display: grid;
+    /* grid-template-rows: repeat(auto-fit, minmax(100px, auto)); */
+    grid-template-rows: auto;
+    gap: 10px;
+    padding: 30px;
+    background-color: var(--dashboard-txt-clr);
+    border-radius: 15px;
+    align-content: start;
+}
+
+.side-card .head {
+    padding-bottom: 10px;
+}
+.side-card h2{
+    /* font-family: var(--paragraph-font); */
+    font-family: var(--dashboard-font);
+    font-size: var(--content-size);
+}
+.side-card p {
+    /* font-family: var(--content-font); */
+    font-family: 'Roboto';
+    font-size: var(--content-size);
+    padding-bottom: 10px;
+}
+
+aside .card .center {
+    border-top:2px solid black;
+    border-bottom: 2px solid black;
+    padding: 5px 0;
+}
+
+.social > div {
+    display: grid;
+    grid-template-columns: 50px auto;
+    /* grid-template-columns: repeat(auto-fit, minmax(55px, auto)); */
+    align-content: start;
+    justify-content: start;
+    max-height: 55px;
+}
+
+.social .facebook {
+    max-height: 50px;
 }
